cluster/apps/default/hello/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hello-world
  namespace: default
  labels:
    app.kubernetes.io/name: hello-kubernetes
    app.kubernetes.io/instance: hello-world
    app.kubernetes.io/version: "1.10"
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: hello-kubernetes
    app.kubernetes.io/instance: hello-world
