cluster/apps/default/hello/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    external-dns.alpha.kubernetes.io/target: "gw.${SECRET_PUBLIC_DOMAIN}"
    external-dns.home.arpa/enabled: "true"
    hajimari.io/enable: "true"
  labels:
    app.kubernetes.io/name: hello-kubernetes
    app.kubernetes.io/instance: hello-world
  name: hello-world
  namespace: default
spec:
  ingressClassName: traefik
  rules:
    - host: &host hello.${SECRET_PUBLIC_DOMAIN}
      http:
        paths:
          - backend:
              service:
                name: hello-world
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - *host
      secretName: tls.hello
